# ElectronicsFromBasics

./: LICENSE  README.md  main.py  main.typ  pyproject.toml
DC/: dc.typ
DC/chap1/: 1_static_electricity.typ  2_insulators_and_electron_flow.typ  3_electric_circuits.typ  4_voltage_and_current.typ  5_resistance.typ  6_voltage_and_current_practical.typ  7_conventional_electron_flow.typ  chap1.typ
DC/chap2/: 1_voltage_current_resistance_relation.typ  2_analogy_for_ohms_law.typ  3_power_in_electric_circuits.typ  4_calculating_electric_power.typ  5_resistors.typ  6_nonlinear_conduction.typ  7_circuit_wiring.typ  8_polarity_of_voltage_drops.typ  9_computer_simulation_of_electric_circuits.typ  chap2.typ
DC/chap3/: 10_electric_shock_data.typ  1_importance_of_electrical_safety.typ  2_physiological_effects_of_electricity.typ  3_shock_current_path.typ  4_ohms_law_again.typ  5_safe_practices.typ  6_emergency_response.typ  7_common_hazards.typ  8_safe_circuit_design.typ  9_safe_meter_usage.typ  chap3.typ
DC/chap4/: 1_scientific_notation.typ  2_arithmetic_with_scientific_notation.typ  3_metric_notation.typ  4_metric_prefix_conversions.typ  5_hand_calculator_use.typ  6_scientific_notation_in_spice.typ  chap4.typ
DC/chap5/: 1_what_are_series_parallel_circuits.typ  2_simple_series_circuits.typ  3_simple_parallel_circuits.typ  4_conductance.typ  5_power_calculations.typ  6_correct_ohms_law_use.typ  7_component_failure_analysis.typ  8_simple_resistor_circuits.typ  chap5.typ
DC/chap6/: 1_voltage_divider_circuits.typ  2_kirchhoffs_voltage_law.typ  chap6.typ  (+2 more)
core/: core.typ
(+13 files in other folders)
