[tool.poetry]
name = "electronicsfrombasics"
version = "0.1.0"
description = ""
authors = ["RaphGL <raphfl.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
